--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.50.0",
     "react-icons": "^5.0.1",
+    "react-joyride": "^2.7.4",
     "react-virtualized-auto-sizer": "^1.0.22",
     "react-window": "^1.8.10",
     "tailwind-merge": "^2.2.1",
